--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Aplicacion web con nodejs, bootstrap, ejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Rolando Cruz",
   "license": "ISC",
